# arm_demo

./: .gitignore  CMakeLists.txt
get_status_demo_src/: demo_get_feedback.cpp  save_state.cpp
launch/: demo_move_to_end.launch  demo_move_to_init.launch  demo_whole_traj.launch  demo_whole_traj_sync.launch
src/: demo_keyboard_input_pid.cpp  demo_send_script_line_sin.cpp  demo_send_script_speed_circle.cpp  demo_send_script_speed_pid_1.cpp  demo_send_script_speed_pid_GUI_multi.cpp  demo_send_script_speed_pid_GUI_multi_file.cpp  demo_send_script_speed_pid_GUI_multi_file_move_to_end.cpp  demo_send_script_speed_pid_GUI_multi_file_move_to_init.cpp  demo_send_script_speed_pid_GUI_multi_file_sync.cpp  demo_send_script_speed_pid_GUI_multi_file_zheng.cpp  demo_send_script_speed_pid_GUI_multi_file_zhun.cpp  demo_send_script_speed_set.cpp  demo_send_script_speed_sin.cpp  demo_send_script_speed_sin_feedback.cpp  demo_send_script_speed_sin_position.cpp  demo_send_script_speed_start.cpp  demo_send_script_speed_stop.cpp  ldlinux.sys
